edit w2d1.md - list sorted 추가

--- a/w2d1.md
+++ b/w2d1.md
@@ -111,6 +111,30 @@ menu[0]
 #=> 중국집
 ```
 
+`list`는 정렬을 할 수 있다.
+
+```python
+a = [3,1,2]
+# 1. sorted
+sorted(a)
+#=> [1,2,3] 리턴
+print(a)
+#[3,1,2]
+a = sorted(a)
+print(a)
+#[1,2,3]
+
+# 2. .sort()
+a.sort()
+#=> None 리턴
+print(a)
+#[1,2,3]
+```
+
+
+
+
+
 ## 4) Dictionary
 
 `Dictionary`는 hash(해시)라고도 불린다. `key`와 `value`가 짝지어져 있다.
@@ -267,9 +291,16 @@ sorted(a) : 원본을 안바꿈. 바뀐것을 리턴
 
 ```
 git config --global user.name "아이디"
-
 git config --global user.email "이메일"
+git init 해당 폴더를 마스터 폴더로 지정
+git status
+git add . (.은 리눅스에서 현재 디렉토리라는 뜻, 커밋할 목록을 업로드)
+git commit -m "비고 입력" => 현재 상황을 스냅샷 처럼 저장.
+git log 이력 나열
+git 머시기로 당시 상황을 재현 가능.
 ```
+
+
 
 
 
