--- a/W2D2.md
+++ b/W2D2.md
@@ -1,4 +1,4 @@
-# DAY 2(12/18)
+# DAY2 (12/18)
 
 ### 1. 파이썬 기초
 
@@ -392,3 +392,32 @@ with open("ssafy.txt","r") as f:
 a.strip() : a에서 괄호 안의 문자 제거
 
 a.lstrip(): a의 왼쪽 부분의 괄호 안의 문자 제거
+
+
+
+#### 집 컴에서 보기
+
+1. 바탕화면에 폴더 생성
+2. GitHub에서 Clone or download의 주소 복사
+3. 터미널로 이동
+4. 집 폴더 접근
+5. git clone 복사된 주소
+6. 다운로드 완료
+
+
+
+#### bootstrap
+
+1. startbootstrap.com에서 resume 형식 다운로드
+2. 바탕화면에 portfolio 폴더 만들고 압출 풀어서 이동
+3. github에서 저장소 만들고 dmlimgo.github.io라고 저장
+4. 터미널에서 portfolio 폴더를 git에서 사용하겠다는 명령어 입력 
+
+```powershell
+$ git init
+```
+
+5. git add .을 포함한 기타 명령어 입력. push.
+6. 모두 입력하고 나면 dmlimgo.github.io로 홈페이지 접속 가능
+7. vs code를 이용해서 수정
+
