--- a/W2D3.md
+++ b/W2D3.md
@@ -1,12 +1,14 @@
 # Week2 Day3 (18.12.19)
 
-#### 1. Dictionary
+### Dictionary
 
-* key와 value가 짝지어져 있는 형태
+* `key`와 `value`가 짝지어져 있는 형태
+* `key`에는 `list`나 `dictionary`형태 빼고 다된다.
 
-* key에는 list나 dictionary형태 빼고 다된다.
+#### 1. 형식
 
 ```python
+# 기본 형식
 phonebook = {
     "중국집":"561221",
     "초밥집":"123",
@@ -15,45 +17,19 @@ phonebook = {
 # 다른 형식으로도 표현 가능
 phonebook2 = dict(중국집=1, 초밥집=2)
 
-print(phonebook)
-print(phonebook2)
-
 # 변수 추가
 phonebook["분식집"]="123124"
-```
 
-* dictionary 안에 dictionary도 가능
-
-```python
+# dictionary 안의 dictionary
 idol = {
-    "소녀시대" : dict(윤아 = 29, 태연 = 30, 제시카 = 28),
-    "샤이니" : dict(태민 = 28, 키 = 29, 철수 = 30)
-}
-# 혹은
-idol2 = {
-    "소녀시대" : {
-        "윤아" : 29,
-        "태연" : 30,
-        "제시카" : 28
-    },
-    "샤이니" : {
-        "태민" : 28,
-        "키" : 29,
-        "철수" : 30
-    }
+    "소녀시대" : dict(윤아 = 29, 태연 = 30),
+    "샤이니" : dict(태민 = 28, 키 = 29)
 }
 ```
 
-* for 문에 넣어서 출력하면 key 만 출력된다
+#### 2. 특징
 
-```python
-for what in phonebook:
-    print(what)
-```
-
-​	key가 있으면 value도 출력가능하지만
-
-​	value만 있으면 key를 출력할 수 없기 때문이다.
+* `for` 문에 넣어서 출력하면 `key` 만 출력된다
 
 ```python
 for what in phonebook:
@@ -61,7 +37,9 @@ for what in phonebook:
     print(phonebook[what])
 ```
 
-​	으로 하면 둘다 출력 가능
+​	`key`가 있으면 `value`도 출력가능하지만
+
+​	`value`만 있으면 `key`를 출력할 수 없기 때문이다.
 
 * 한 줄에 출력을 하고 싶다면
 
@@ -80,7 +58,7 @@ for key, value in phonebook.items():
 
 ​	이것만 알고 있어도 활용이 가능
 
-* key나 value만 출력하고 싶다면
+* `key`나 `value`만 출력하고 싶다면
 
 ```python
 for key in phonebook.keys():
@@ -92,9 +70,37 @@ for value in phonebook.values():
     print(value)
 ```
 
+- 이 요소가 리스트 안에 있니?
 
+```python
+a = [1,2,3]
+4 in a
+False
+3 in a
+True
 
-#### Dictionary 예제
+b = "asdf"
+"f" in b
+True
+"z" in b
+False
+```
+
+```python
+len(dic) # dictionary의 갯수
+```
+
+```python
+dir(score.values()) # 사용가능한 함수 목록
+```
+
+```python
+min(a)
+max(b)
+#리스트의 최대, 최소 구하기
+```
+
+#### 3. 예제
 
 ```python
 """
@@ -109,12 +115,12 @@ iu_score = {
 
 # 답
 print("=====Q1=====")
-'''내코드
+# 내 풀이
 for x in iu_score.values():
     sum = sum + x
 avg = sum/len(iu_score)
 print(avg)
-'''
+# 강사님 풀이
 avg = sum(iu_score.values())/len(iu_score)
 print(avg)
 
@@ -168,6 +174,7 @@ city = {
 
 # 답변 코드는 아래에 작성해주세요.
 print("=====Q3=====")
+# 내 풀이
 for key in city:
     total_score = 0
     avg = 0
@@ -227,7 +234,7 @@ city = {
     "대전": [-3, -5, 2],
     "광주": [0, -2, 10],
     "부산": [2, -2, 9]
-}
+	}
 
 cold = 0
 hot = 0
@@ -274,48 +281,17 @@ if correct == 1:
     print("네 있습니다.")
 else:
     print("아뇨 없습니다.")
-    
-```
-
-* 이 요소가 리스트 안에 있니?
-
-```python
-a = [1,2,3]
-4 in a
-False
-3 in a
-True
-
-b = "asdf"
-"f" in b
-True
-"z" in b
-False
-```
-
-```python
-len(dic) # dictionary의 갯수
-```
-
-```python
-dir(score.values()) # 사용가능한 함수 목록
-```
-
-```python
-min(a)
-max(b)
-#리스트의 최대, 최소 구하기
 ```
 
 
 
-### 2. 텔레그램
+### 텔레그램
 
-##### 1) 스티커 생성
+#### 1. 스티커 생성하기
 
 * `Stickers`봇 에서 명령어를 입력해 스티커 생성 가능
 
-##### 2) 메세지 보내기 
+#### 2. 메세지 보내기 
 
 @botFather-start-/new bot- 명령어대로 진행
 
@@ -353,7 +329,7 @@ JSON형태면 BeautifulSoup을 안써도됌
 
 
 
-##### 환경변수 관리
+#### 환경변수 관리
 
 token 복사
 
@@ -371,7 +347,7 @@ esc -> :wq
 
 
 
-##### 챗봇활용
+#### 챗봇활용
 
 ```python
 import requests
@@ -403,6 +379,6 @@ requests.get(url)
 
 ```
 
-##### IFTTT
+### IFTTT
 
 IoT활용 관련 사이트 아주 유명.
