--- a/w2d1.md
+++ b/w2d1.md
@@ -4,7 +4,7 @@ range가 list보다 메모리 효율이 좋다
 1~25는 메모리에서 쉽게 가져올 수 있도록 지정해 놓음
 공공데이터 포털 data.go.kr -> 오픈 API만 쓴다.(파일은 못 써먹음)
 
-
+changed for push git at home
 
 ### 1. CLI (Command Line Interface)
 
