--- a/Lecture note/02_0_Control_of_flow.ipynb
+++ b/Lecture note/02_0_Control_of_flow.ipynb
@@ -22,16 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 이하\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 위의 flow chart를 조건문을 통해 만들어봅시다."
+    "# 위의 flow chart를 조건문을 통해 만들어봅시다.\n",
+    "a = 5\n",
+    "if a > 5:\n",
+    "    print(\"5 초과\")\n",
+    "else:\n",
+    "    print(\"5 이하\")\n",
+    "print(a)"
    ]
   },
   {
@@ -106,15 +121,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "홀수입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 실습!"
+    "# 실습!\n",
+    "num = 3\n",
+    "print(num)\n",
+    "if num % 2:\n",
+    "    print(\"홀수입니다.\")\n",
+    "else:\n",
+    "    print(\"짝수입니다.\")"
    ]
   },
   {
@@ -163,17 +193,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "점수를 입력하세요 : 100\n",
+      "A\n"
+     ]
+    }
+   ],
    "source": [
     "# 실습!\n",
     "score = int(input(\"점수를 입력하세요 : \"))\n",
-    "# 아래에 코드를 작성하세요."
+    "# 아래에 코드를 작성하세요.\n",
+    "if score >= 90:\n",
+    "    rank = 'A'\n",
+    "elif score >= 80:\n",
+    "    rank = 'B'\n",
+    "elif score >= 70:\n",
+    "    rank = 'C'\n",
+    "elif score >= 60:\n",
+    "    rank = 'D'\n",
+    "else:\n",
+    "    rank = 'F'\n",
+    "print(rank)"
    ]
   },
   {
@@ -250,13 +300,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요 : 45\n",
+      "45\n"
+     ]
+    }
+   ],
    "source": [
     "# 아래의 코드는 무엇을 위한 코드일까요?\n",
     "num = int(input(\"숫자를 입력하세요 : \"))\n",
-    "value = num if num >= 0 else 0\n",
+    "value = num if num >= 0 else 0 # \"참조건\" \"if 조건\" \"거짓조건\"\n",
     "print(value)"
    ]
   },
@@ -283,15 +342,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "num = -5\n",
+    "if num >= 0:\n",
+    "    value = num\n",
+    "else:\n",
+    "    value = 0\n",
+    "print(value)"
    ]
   },
   {
@@ -319,11 +392,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "짝수입니다.\n"
+     ]
+    }
+   ],
    "source": [
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "num = 2\n",
+    "result = '홀수입니다.' if num % 2 == 1 else '짝수입니다.'\n",
+    "print(result)"
    ]
   },
   {
@@ -394,13 +478,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "끝\n"
+     ]
+    }
+   ],
    "source": [
     "# flowchart를 for문을 통해 코드로 작성하면 다음과 같습니다.\n",
     "for i in range(5):\n",
@@ -464,15 +561,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "odd_nums = []\n",
+    "for val in range(30):\n",
+    "    if val % 2:\n",
+    "        odd_nums.append(val)\n",
+    "print(odd_nums)"
    ]
   },
   {
@@ -490,11 +600,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 초밥\n",
+      "2 치킨\n"
+     ]
+    }
+   ],
    "source": [
-    "# enumerate()를 활용해서 출력해봅시다."
+    "# enumerate()를 활용해서 출력해봅시다.\n",
+    "lunch = ['초밥', '치킨']\n",
+    "for idx, menu in enumerate(lunch, 1):\n",
+    "    print(idx, menu)"
    ]
   },
   {
@@ -514,11 +636,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, '초밥'), (1, '치킨')]\n",
+      "<class 'enumerate'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# enumerate() 함수를 사용하였을 때 어떻게 표현이 되는지 확인해봅시다."
+    "# enumerate() 함수를 사용하였을 때 어떻게 표현이 되는지 확인해봅시다.\n",
+    "enum_lunch = enumerate(lunch)\n",
+    "print(list(enum_lunch))\n",
+    "print(type(enum_lunch))"
    ]
   },
   {
@@ -545,11 +679,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "초밥\n",
+      "치킨\n"
+     ]
+    }
+   ],
    "source": [
-    "# 옆자리 친구의 이름을 활용하여 dictionary를 만들어봅시다."
+    "# 옆자리 친구의 이름을 활용하여 dictionary를 만들어봅시다.\n",
+    "lunch = {\"초밥\" : \"상무초밥\", \"치킨\" : \"푸라닭\"}\n",
+    "for i in lunch:\n",
+    "    print(i)"
    ]
   },
   {
@@ -567,11 +713,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "상무초밥\n",
+      "푸라닭\n"
+     ]
+    }
+   ],
    "source": [
-    "# value를 출력해봅시다."
+    "# value를 출력해봅시다.\n",
+    "for key in lunch:\n",
+    "    print(lunch[key])"
    ]
   },
   {
@@ -624,11 +781,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teacher Kim\n",
+      "student1 Hong\n",
+      "student2 Kang\n",
+      "Kim\n",
+      "Hong\n",
+      "Kang\n"
+     ]
+    }
+   ],
    "source": [
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "classroom = {\"teacher\": \"Kim\", \"student1\": \"Hong\", \"student2\": \"Kang\"}\n",
+    "for key, val in classroom.items():\n",
+    "    print(key,val)\n",
+    "\n",
+    "for val in classroom.values():\n",
+    "    print(val)"
    ]
   },
   {
@@ -648,11 +824,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# break 문을 활용해봅시다."
+    "# break 문을 활용해봅시다.\n",
+    "cnt = 0\n",
+    "while True:\n",
+    "    print(cnt)\n",
+    "    if cnt == 2:\n",
+    "        break\n",
+    "    cnt += 1"
    ]
   },
   {
@@ -684,12 +876,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [1, 5, 10]\n",
-    "# 여기에 코드를 작성하세요."
+    "# 여기에 코드를 작성하세요.\n",
+    "num = 4\n",
+    "for val in numbers:\n",
+    "    if num == val:\n",
+    "        print(True)\n",
+    "        break\n",
+    "else:\n",
+    "    print(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span class=\"burk\">## else의 위치에 따라 조건이 달라진다</span>"
    ]
   },
   {
@@ -707,11 +921,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# continue를 통해 "
+    "# continue를 통해 \n",
+    "for i in range(10):\n",
+    "    if i % 2:\n",
+    "        continue\n",
+    "    print(i)"
    ]
   },
   {
@@ -731,20 +961,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "break안됨\n"
+     ]
+    }
+   ],
    "source": [
-    "# break가 안되는 상황을 만들어봅시다."
+    "# break가 안되는 상황을 만들어봅시다.\n",
+    "for i in range(10):\n",
+    "    if i == 10:\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"break안됨\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# break가 되는 상황을 만들어봅시다."
+    "# break가 되는 상황을 만들어봅시다.\n"
    ]
   },
   {
