--- a/2. Backjoon/입출력 받아보기.ipynb
+++ b/2. Backjoon/입출력 받아보기.ipynb
@@ -67,38 +67,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f\n",
-      "f\n",
-      "f\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-4b6090b5e55a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwhile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+      "hello\n",
+      "hello\n",
+      " \n"
      ]
     }
    ],
    "source": [
     "while(True):\n",
     "    a = input()\n",
-    "    print(a[0])\n",
-    "    if(a == '') or (a[0] == ' '):\n",
+    "    if a == '':\n",
     "        break\n",
+    "    elif a:\n",
+    "        if a[0] == ' ':\n",
+    "            break\n",
     "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sdfas\n",
+      "sdfas\n",
+      "\n",
+      "\n",
+      "fnae\n",
+      "fnae\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "asjdflaje  \n",
+      "asjdflaje  \n",
+      "Eoferoro\n",
+      "Eoferoro\n",
+      "EOFError\n",
+      "EOFError\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "while(1):\n",
+    "    try:\n",
+    "        a = input()\n",
+    "    except EOFError:\n",
+    "        print('error!!!')\n",
+    "        break\n",
+    "    print(a)\n",
+    "    "
    ]
   },
   {
