--- a/2. Backjoon/for문 사용해보기.ipynb
+++ b/2. Backjoon/for문 사용해보기.ipynb
@@ -9,64 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50\n",
+      "4\n",
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n"
+      "4\n"
      ]
     }
    ],
@@ -76,6 +30,413 @@
     "    for val in range(1, N+1):\n",
     "        print(val)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. 기찍 N"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "if (N <= 100000):\n",
+    "    for val in range(N, 0, -1):\n",
+    "        print(val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. 구구단"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1 * 1 = 1\n",
+      "1 * 2 = 2\n",
+      "1 * 3 = 3\n",
+      "1 * 4 = 4\n",
+      "1 * 5 = 5\n",
+      "1 * 6 = 6\n",
+      "1 * 7 = 7\n",
+      "1 * 8 = 8\n",
+      "1 * 9 = 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "for val in range(1, 10):\n",
+    "    print(f\"{N} * {val} = {N * val}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. 별 찍기 - 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "    *\n",
+      "   **\n",
+      "  ***\n",
+      " ****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "for val in range(N):\n",
+    "    for space in range(N-val-1):\n",
+    "        print('', end = ' ')\n",
+    "    for star in range(val+1):\n",
+    "        print('*', end = '')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  5. 별 찍기 - 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "for val in range(N):\n",
+    "    for space in range(N-val):\n",
+    "        print('*', end = '')        \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  6. 별 찍기 - 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "*****\n",
+      " ****\n",
+      "  ***\n",
+      "   **\n",
+      "    *\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "for val in range(N):\n",
+    "    for space in range(val):\n",
+    "        print(' ', end = '')        \n",
+    "    for star in range(N-val):\n",
+    "        print('*', end = '')        \n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  8. 2007년"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 29\n",
+      "59\n",
+      "THU\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = input()\n",
+    "date = N.split(' ')\n",
+    "x = int(date[0])\n",
+    "y = int(date[1])\n",
+    "weekday = ['MON','TUE','WED','THU','FRI','SAT','SUN']\n",
+    "end_day = [31,28,31,30,31,30,31,31,30,31,30,31]\n",
+    "\n",
+    "\n",
+    "day_cnt = 0\n",
+    "for idx in range(x):\n",
+    "    if idx < x-1:\n",
+    "        day_cnt += end_day[idx] \n",
+    "    elif idx == x-1:\n",
+    "        day_cnt += y - 1\n",
+    "print(weekday[day_cnt % 7])\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "sum = 0\n",
+    "for num in range(1, n+1):\n",
+    "    sum += num\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 10. 숫자의 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "10987654321\n",
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "num = input()\n",
+    "sum = 0\n",
+    "for idx in range(N):\n",
+    "    sum += int(num[idx])\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  11. 열 개씩 끊어 출력하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "oneTwoneTw\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = input()\n",
+    "\n",
+    "if int(len(N) / 10):\n",
+    "    for idx in range(int(len(N) / 10)):\n",
+    "        print(N[idx * 10:(idx+1) * 10])\n",
+    "    else:\n",
+    "        print(N[(idx+1) * 10:])\n",
+    "else:\n",
+    "    print(N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  12. 빠른 A+B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(line, end=\" \")? (<ipython-input-72-a92bd13f1458>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-72-a92bd13f1458>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print line,\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(line, end=\" \")?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "line = sys.stdin.readline()\n",
+    "while line:\n",
+    "    print line,\n",
+    "    line = sys.stdin.readline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
