--- a/3. Lecture note/03_190103_Control_of_flow_function.ipynb
+++ b/3. Lecture note/03_190103_Control_of_flow_function.ipynb
@@ -164,11 +164,11 @@
    ],
    "source": [
     "# 위의 사각형 코드를 rectangle() 함수로 만들어보세요.\n",
-    "def rectangle(height, width):\n",
+    "def rectangle(height, width): # parameter\n",
     "    area = height * width\n",
     "    perimeter = 2 * (height + width)\n",
     "    print(area, perimeter)\n",
-    "rectangle(100,30)"
+    "rectangle(100,30) # 인수, 인자, argument"
    ]
   },
   {
@@ -457,6 +457,15 @@
     "rectangle(1,5)\n",
     "import random\n",
     "random.sample(range(1, 46), 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "함수 : sorted(a)\n",
+    "\n",
+    "메소드 : 클래스에서 불러오는 것 a.sort()"
    ]
   },
   {
@@ -1103,7 +1112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**kwarg = keyword argument"
+    "**kwarg = keyword argument <- 꼭 이거 안써도 됨"
    ]
   },
   {
@@ -1296,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1314,7 @@
        "'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage=10key=abc&targetDt=yyyymmdd&'"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,6 +1322,14 @@
    "source": [
     "# 여기에 코드를 작성해주세요.\n",
     "def my_url(itemPerPage = 10, **args):\n",
+    "    '''\n",
+    "    영진위 API요청을 위해서 URL을 생성합니다.\n",
+    "    필수적으로는 발급받은 key와 targetDt를 넘겨줘야합니다.\n",
+    "    \n",
+    "    key : 발급받은 키(필수)\n",
+    "    targetDt : yyyymmdd 형식(필수)\n",
+    "    itemPerPage : 1~10까지의 숫자(선택, 기본값: 10)\n",
+    "    '''\n",
     "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
     "    return f\"{base_url}itemPerPage={str(itemPerPage)}key={args['key']}&targetDt={args['targetDt']}&\"\n",
     "my_url(key='abc', targetDt='yyyymmdd')\n",
@@ -1321,6 +1338,37 @@
     "    'targetDt': 'yyyymmdd'\n",
     "}\n",
     "my_url(**api)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### * docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    영진위 API요청을 위해서 URL을 생성합니다.\n",
+      "    필수적으로는 발급받은 key와 targetDt를 넘겨줘야합니다.\n",
+      "    \n",
+      "    key : 발급받은 키(필수)\n",
+      "    targetDt : yyyymmdd 형식(필수)\n",
+      "    itemPerPage : 1~10까지의 숫자(선택, 기본값: 10)\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_url.__doc__) # docstring이라고도 하며 주석을 인쇄하는 역할"
    ]
   },
   {
@@ -1376,22 +1424,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 'aa'}\n",
+      "1~10까지의 값을 넣어주세요.\n",
+      "필수 요청변수가 누락되었습니다.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?itemPerPage=40&key=aa&'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 여기에 코드를 작성해주세요."
+    "# 여기에 코드를 작성해주세요.\n",
+    "def my_url(itemPerPage = 10, **args):\n",
+    "    print(args)\n",
+    "    base_url = 'http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?'\n",
+    "    if itemPerPage < 1 or itemPerPage > 10 :\n",
+    "        print('1~10까지의 값을 넣어주세요.')\n",
+    "    if 'key' not in args or 'targetDt' not in args:\n",
+    "        print('필수 요청변수가 누락되었습니다.')\n",
+    "    base_url += f'itemPerPage={itemPerPage}&'\n",
+    "    for key, value in args.items():\n",
+    "        base_url += f'{key}={value}&'\n",
+    "    return base_url\n",
+    "my_url(40, key='aa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-43-c99750b6c6bc>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-43-c99750b6c6bc>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    my_url(key='aa', targetDt='yyyymmdd', 60)\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
     "# 함수를 호출해보세요.\n",
     "my_url(20)\n",
-    "my_url(key='aa', tagetDt='yyyymmdd', 60)"
+    "my_url(key='aa', targetDt='yyyymmdd', 60)"
    ]
   },
   {
