--- a/3. Lecture note/P02_190103_Python.ipynb
+++ b/3. Lecture note/P02_190103_Python.ipynb
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1342,63 +1342,26 @@
      "text": [
       "         1 월\n",
       " Mo Tu We Th Fr Sa Su \n",
-      "     1  2  3  4  5  6 \n",
-      "  7  8  9 10 11 12 13 \n",
-      " 14 15 16 17 18 19 20 \n",
-      " 21 22 23 24 25 26 27 \n",
-      " 28 29 30 31 \n",
-      "         2 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
-      "              1  2  3 \n",
-      "  4  5  6  7  8  9 10 \n",
-      " 11 12 13 14 15 16 17 \n",
-      " 18 19 20 21 22 23 24 \n",
-      " 25 26 27 28 \n",
-      "         3 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
-      "              1  2  3 \n",
-      "  4  5  6  7  8  9 10 \n",
-      " 11 12 13 14 15 16 17 \n",
-      " 18 19 20 21 22 23 24 \n",
-      " 25 26 27 28 29 30 31 \n",
-      " \n",
-      "         4 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
-      "  1  2  3  4  5  6  7 \n",
-      "  8  9 10 11 12 13 14 \n",
-      " 15 16 17 18 19 20 21 \n",
-      " 22 23 24 25 26 27 28 \n",
-      " 29 30 \n",
-      "         5 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
-      "        1  2  3  4  5 \n",
-      "  6  7  8  9 10 11 12 \n",
-      " 13 14 15 16 17 18 19 \n",
-      " 20 21 22 23 24 25 26 \n",
-      " 27 28 29 30 31 \n",
-      "         6 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
-      "                 1  2 \n",
-      "  3  4  5  6  7  8  9 \n",
-      " 10 11 12 13 14 15 16 \n",
-      " 17 18 19 20 21 22 23 \n",
-      " 24 25 26 27 28 29 30 \n",
-      " \n",
-      "         7 월\n",
-      " Mo Tu We Th Fr Sa Su \n",
       "  1  2  3  4  5  6  7 \n",
       "  8  9 10 11 12 13 14 \n",
       " 15 16 17 18 19 20 21 \n",
       " 22 23 24 25 26 27 28 \n",
       " 29 30 31 \n",
-      "         8 월\n",
+      "         2 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "           1  2  3  4 \n",
+      "  5  6  7  8  9 10 11 \n",
+      " 12 13 14 15 16 17 18 \n",
+      " 19 20 21 22 23 24 25 \n",
+      " 26 27 28 \n",
+      "         3 월\n",
       " Mo Tu We Th Fr Sa Su \n",
       "           1  2  3  4 \n",
       "  5  6  7  8  9 10 11 \n",
       " 12 13 14 15 16 17 18 \n",
       " 19 20 21 22 23 24 25 \n",
       " 26 27 28 29 30 31 \n",
-      "         9 월\n",
+      "         4 월\n",
       " Mo Tu We Th Fr Sa Su \n",
       "                    1 \n",
       "  2  3  4  5  6  7  8 \n",
@@ -1406,28 +1369,65 @@
       " 16 17 18 19 20 21 22 \n",
       " 23 24 25 26 27 28 29 \n",
       " 30 \n",
-      "         10 월\n",
+      "         5 월\n",
       " Mo Tu We Th Fr Sa Su \n",
       "     1  2  3  4  5  6 \n",
       "  7  8  9 10 11 12 13 \n",
       " 14 15 16 17 18 19 20 \n",
       " 21 22 23 24 25 26 27 \n",
       " 28 29 30 31 \n",
-      "         11 월\n",
+      "         6 월\n",
       " Mo Tu We Th Fr Sa Su \n",
       "              1  2  3 \n",
       "  4  5  6  7  8  9 10 \n",
       " 11 12 13 14 15 16 17 \n",
       " 18 19 20 21 22 23 24 \n",
       " 25 26 27 28 29 30 \n",
-      "         12 월\n",
+      "         7 월\n",
       " Mo Tu We Th Fr Sa Su \n",
       "                    1 \n",
       "  2  3  4  5  6  7  8 \n",
       "  9 10 11 12 13 14 15 \n",
       " 16 17 18 19 20 21 22 \n",
       " 23 24 25 26 27 28 29 \n",
-      " 30 31 \n"
+      " 30 31 \n",
+      "         8 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "        1  2  3  4  5 \n",
+      "  6  7  8  9 10 11 12 \n",
+      " 13 14 15 16 17 18 19 \n",
+      " 20 21 22 23 24 25 26 \n",
+      " 27 28 29 30 31 \n",
+      "         9 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "                 1  2 \n",
+      "  3  4  5  6  7  8  9 \n",
+      " 10 11 12 13 14 15 16 \n",
+      " 17 18 19 20 21 22 23 \n",
+      " 24 25 26 27 28 29 30 \n",
+      " \n",
+      "         10 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "  1  2  3  4  5  6  7 \n",
+      "  8  9 10 11 12 13 14 \n",
+      " 15 16 17 18 19 20 21 \n",
+      " 22 23 24 25 26 27 28 \n",
+      " 29 30 31 \n",
+      "         11 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "           1  2  3  4 \n",
+      "  5  6  7  8  9 10 11 \n",
+      " 12 13 14 15 16 17 18 \n",
+      " 19 20 21 22 23 24 25 \n",
+      " 26 27 28 29 30 \n",
+      "         12 월\n",
+      " Mo Tu We Th Fr Sa Su \n",
+      "                 1  2 \n",
+      "  3  4  5  6  7  8  9 \n",
+      " 10 11 12 13 14 15 16 \n",
+      " 17 18 19 20 21 22 23 \n",
+      " 24 25 26 27 28 29 30 \n",
+      " 31 \n"
      ]
     }
    ],
@@ -1437,7 +1437,7 @@
     "            'end_days' : [31,28,31,30,31,30,31,31,30,31,30,31]}\n",
     "\n",
     "\n",
-    "day_cnt = 1\n",
+    "day_cnt = 0\n",
     "for mon in range(1,13):\n",
     "    print(f\"         {mon} 월\")\n",
     "    for w_days in cal_days['week_days']:\n",
@@ -1588,6 +1588,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   },
   "toc": {
    "base_numbering": 1,
