--- a/3. Lecture note/04_190104_recursive_function.ipynb
+++ b/3. Lecture note/04_190104_recursive_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "24"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,6 +79,31 @@
    "source": [
     "# 아래의 코드를 통해 fact(5) 함수를 호출해주세요.\n",
     "fact(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n-1)\n",
+    "factorial(5)"
    ]
   },
   {
@@ -402,6 +427,29 @@
     "        print(f\"{n}번째 원반을 {start}->{end}\")\n",
     "        hanoi(n-1, tmp, start, end)\n",
     "hanoi(3, 'a', 'b', 'c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hanoi(3,a,b,c) 실행\n",
+    "    hanoi(2,a,c,b) 실행\n",
+    "        hanoi(1,a,b,c) 실행\n",
+    "            hanoi(0,a,c,b) 실행\n",
+    "            hanoi(0,a,c,b) None 리턴\n",
+    "            '1'번째 원반을 a->c\n",
+    "            hanoi(0,b,a,c) 실행\n",
+    "            hanoi(0,b,a,c) None 리턴\n",
+    "        '2'번째 원반을 a->b\n",
+    "        hanoi(1,c,a,b) 실행\n",
+    "            hanoi(0,c,b,a) 실행\n",
+    "            hanoi(0,c,b,a) None 리턴\n",
+    "            '1'번째 원반을 c->b\n",
+    "            hanoi(0) 실행\n",
+    "            hanoi(0) None리턴\n",
+    "    3번째 원반을 a->c\n",
+    "            \n"
    ]
   },
   {
