--- a/3. Lecture note/P03_190104_function.ipynb
+++ b/3. Lecture note/P03_190104_function.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "False"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +112,29 @@
    "source": [
     "[] == False\n",
     "# list와 False를 비교하는 것과 같다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n",
+      "<class 'list'>\n",
+      "<class 'bool'>\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(False))\n",
+    "print(type([]))\n",
+    "print(type(bool([])))\n",
+    "print(bool([]))"
    ]
   },
   {
