--- a/1. Workshop&HW/20190107/python_ssafy_1반_임동명.ipynb
+++ b/1. Workshop&HW/20190107/python_ssafy_1반_임동명.ipynb
@@ -20,11 +20,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# 정답\n"
+    "# 정답\n",
+    "n = 5\n",
+    "m = 9\n",
+    "a = '*' * n + '\\n'\n",
+    "print(a * m)"
    ]
   },
   {
@@ -36,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# 정답\n"
+    "# 정답\n",
+    "sum = 0\n",
+    "for val in student.values():\n",
+    "    sum += int(val)\n",
+    "print(sum / len(student))"
    ]
   },
   {
@@ -62,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 3, 'B': 3, 'O': 3, 'AB': 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 정답\n"
+    "# 정답\n",
+    "cnt={}\n",
+    "for blood in blood_types:\n",
+    "    if blood not in cnt:\n",
+    "        cnt[blood] = 1\n",
+    "    elif blood in cnt:\n",
+    "        cnt[blood] += 1\n",
+    "print(cnt)"
    ]
   }
  ],
