--- a/2. Backjoon/6. 1차원 배열 사용하기.ipynb
+++ b/2. Backjoon/6. 1차원 배열 사용하기.ipynb
@@ -4,6 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1152 단어의 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Benjamin button time goes back\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(input().split()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2577 숫자의 개수"
    ]
   },
@@ -170,6 +195,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
