--- a/2. Backjoon/7. 문자열 사용하기.ipynb
+++ b/2. Backjoon/7. 문자열 사용하기.ipynb
@@ -135,6 +135,144 @@
     "else:\n",
     "    print(word)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1316 그룹 단어 체커"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "aba\n",
+      "abab\n",
+      "abcabc\n",
+      "a\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "cnt = 0\n",
+    "for w in range(n):\n",
+    "    nw = []\n",
+    "    word = list(input())\n",
+    "    nw.append(word[0])\n",
+    "    for i in range(len(word)-1):\n",
+    "        if word[i] != word[i+1]:\n",
+    "            nw.append(word[i+1])\n",
+    "    for x in nw:\n",
+    "        if nw.count(x) > 1:\n",
+    "            break\n",
+    "    else:\n",
+    "        cnt += 1\n",
+    "print(cnt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2908 상수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "347 745\n",
+      "['347', '745']\n",
+      "743\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input().split()\n",
+    "a = n[0][::-1]\n",
+    "b = n[1][::-1]\n",
+    "\n",
+    "if int(a) > int(b):\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5622 다이얼"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZAZ\n",
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input()\n",
+    "val = ['ABC','DEF','GHI','JKL','MNO','PQRS','TUV','WXYZ']\n",
+    "time = 0\n",
+    "for w in n:\n",
+    "    for idx, x in enumerate(val):\n",
+    "        if w in x:\n",
+    "            time += idx + 3\n",
+    "print(time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2941 크로아티아 알파벳"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ddz=z=\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input()\n",
+    "croa = ['c=','c-','dz=','d-','lj','nj','s=','z=']\n",
+    "for x in croa:\n",
+    "    if x in n:\n",
+    "        n = n.replace(x,'I')\n",
+    "print(len(n))"
+   ]
   }
  ],
  "metadata": {
