--- a/2. Backjoon/8. 규칙찾기.ipynb
+++ b/2. Backjoon/8. 규칙찾기.ipynb
@@ -16,15 +16,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000\n",
+      "18258\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1 = 1\n",
-    "# 2~7 = 2\n",
-    "# 8~19 = 3\n",
-    "# 20~37 = 4\n",
-    "# 38~61 = 5"
+    "n = int(input())\n",
+    "pib = 0\n",
+    "for i in range(n):\n",
+    "    pib += i\n",
+    "    if n == 1:\n",
+    "        print(1)\n",
+    "    elif (1 + 6 * pib) < n and n <= (1 + 6 * (pib + i +1)):\n",
+    "        print(i+2)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1193 분수찾기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "100번째 구하려면\n",
+    "1+2+3...n 한 것이 100쯤 이어야함\n",
+    "1,3,6,10,15,21,28,36,45,55,66,78,91(n=13),105(n=14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1/4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input())\n",
+    "\n",
+    "air = 0\n",
+    "for i in range(1, x+1):\n",
+    "    air += i\n",
+    "    if air-i < x and x <= air:\n",
+    "        if (i+1) % 2:\n",
+    "            bunja = i - (air - x)\n",
+    "            bunmo = (air - x) + 1\n",
+    "        else:\n",
+    "            bunja = (air - x) + 1\n",
+    "            bunmo = i+1 - bunja\n",
+    "            \n",
+    "print(f'{bunja}/{bunmo}')"
    ]
   },
   {
@@ -32,22 +92,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "1\n",
-    "6\n",
-    "12\n",
-    "18\n",
-    "24"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "n = int(input())\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
