--- a/2. Backjoon/8. 규칙찾기.ipynb
+++ b/2. Backjoon/8. 규칙찾기.ipynb
@@ -88,18 +88,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 1011 Fly me to the Alpha Centauri"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t = int(input())\n",
+    "for each in range(t):\n",
+    "    xy = list(map(int, input().split()))\n",
+    "    (xy[1] - xy[0])"
+   ]
   },
   {
    "cell_type": "code",
