--- a/2. Backjoon/1. 입출력 받아보기.ipynb
+++ b/2. Backjoon/1. 입출력 받아보기.ipynb
@@ -67,69 +67,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Baekjoon\n",
+      "Baekjoon\n",
+      "Online Judge\n",
+      "Online Judge\n",
       " \n"
      ]
     }
    ],
    "source": [
-    "while(True):\n",
-    "    a = input()\n",
-    "    if a == '':\n",
-    "        break\n",
-    "    elif a:\n",
-    "        if a[0] == ' ':\n",
-    "            break\n",
-    "    print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sdfas\n",
-      "sdfas\n",
-      "\n",
-      "\n",
-      "fnae\n",
-      "fnae\n",
-      " \n",
-      " \n",
-      " \n",
-      " \n",
-      "asjdflaje  \n",
-      "asjdflaje  \n",
-      "Eoferoro\n",
-      "Eoferoro\n",
-      "EOFError\n",
-      "EOFError\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "while(1):\n",
+    "while True:\n",
     "    try:\n",
     "        a = input()\n",
+    "        if a == '':\n",
+    "            break\n",
+    "        elif a:\n",
+    "            if a[0] == ' ':\n",
+    "                break\n",
+    "        print(a)\n",
     "    except EOFError:\n",
-    "        print('error!!!')\n",
-    "        break\n",
-    "    print(a)\n",
-    "    "
+    "        break"
    ]
   },
   {
@@ -144,7 +110,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        a = input()\n",
+    "        print(a)\n",
+    "    except EOFError:\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
