--- a/9. to remove/W2D3.md
+++ b/9. to remove/W2D3.md
@@ -26,6 +26,8 @@ print(url)
 
 ![캡처](C:\Users\student\Desktop\TIL\pic\1.PNG)
 
+![캡처](C:\Users\lim\Desktop\ssafy\TIL\8. picture\1.PNG)
+
 딕셔너리 형태로 나옴. 
 
 편하게 보기 위해 크롬 웹 스토어에서 JSON Viewer 설치
