--- a/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
@@ -124,18 +124,19 @@
     "for each in range(t):\n",
     "    xy = list(map(int, input().split()))\n",
     "    dif = xy[1] - xy[0]\n",
-    "\n",
-    "    n_list = [1]\n",
+    "    \n",
     "    result = 1\n",
-    "    for i in range(1, dif+2):\n",
+    "    i = 1\n",
+    "    while True:\n",
+    "        if (result <= dif) and (dif < result + i):\n",
+    "            print(i*2-1)\n",
+    "            break\n",
     "        result += i\n",
-    "        n_list.append(result)\n",
+    "        if (result <= dif) and (dif < result + i):\n",
+    "            print(i*2)\n",
+    "            break\n",
     "        result += i\n",
-    "        n_list.append(result)\n",
-    "print(n_list)\n",
-    "#     for idx, val in enumerate(n_list):\n",
-    "#         if dif >= n_list[idx] and dif < n_list[idx+1]:\n",
-    "#             print(idx+1)"
+    "        i += 1"
    ]
   },
   {
