--- a/알고리즘 수업.md
+++ b/알고리즘 수업.md
@@ -62,6 +62,9 @@ O(log n)는 반반씩 나눠서 찾는다. - 2^10 = 1024이므로 1024를 10번 
     - 다이익스트라
   * O(n^3)
     * 프로이드 최단경로 알고리즘
+
+  ---
+
   * O(2^n) 
     * 부분 집합
   * O(n!)
@@ -159,3 +162,6 @@ countingsort(A,B,C)
 print(B)
 ```
 
+---
+
+아스키코드 - 7bit + 페리티비트(1bit)
