--- a/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
@@ -263,26 +263,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "40000 40000 40000 39999\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-adc276cc9339>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mcnt\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m             \u001b[0mx\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "1\n",
+      "40000 39999 39999 39998\n",
+      "1599959999\n"
      ]
     }
    ],
@@ -295,17 +285,17 @@
     "    x = MNxy[2]\n",
     "    y = MNxy[3]\n",
     "    \n",
-    "    gcd = 0\n",
-    "    i = min(M, N)\n",
-    "    while True:\n",
-    "        if M % i == 0 and N % i == 0:\n",
-    "            gcd = i\n",
-    "            break\n",
-    "        i -= 1\n",
+    "#     gcd = 0\n",
+    "#     i = min(M, N)\n",
+    "#     while True:\n",
+    "#         if M % i == 0 and N % i == 0:\n",
+    "#             gcd = i\n",
+    "#             break\n",
+    "#         i -= 1\n",
     "        \n",
-    "    if abs(M-N) % gcd:\n",
-    "        print(-1)\n",
-    "        continue\n",
+    "#     if abs(M-N) % gcd:\n",
+    "#         print(-1)\n",
+    "#         continue\n",
     "    \n",
     "    cnt = 0\n",
     "    while True:\n",
@@ -320,9 +310,9 @@
     "            result = x + M * cnt\n",
     "            print(result)\n",
     "            break\n",
-    "#         if cnt > ((M*N)/(abs(M-N)+1)):\n",
-    "#             print(-1)\n",
-    "#             break"
+    "        if cnt > ((M*N)/M):\n",
+    "            print(-1)\n",
+    "            break"
    ]
   },
   {
@@ -331,36 +321,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x cnt\n",
-    "1  1\n",
-    "-1 2 -> 11 2\n",
-    "9  3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "M=10\n",
-    "N=12\n",
-    "gcd = 0\n",
-    "i = min(M, N)\n",
-    "while True:\n",
-    "    if (M % i == 0) and (N % i == 0):\n",
-    "        gcd = i\n",
-    "        break\n",
-    "    i -= 1\n",
-    "print(gcd)"
+    "T = int(input())\n",
+    "for i in range(T):\n",
+    "    MNxy = list(map(int, input().split()))\n",
+    "    M = MNxy[0]\n",
+    "    N = MNxy[1]\n",
+    "    x = MNxy[2]\n",
+    "    y = MNxy[3]\n",
+    "    \n",
+    "    cnt = 0\n",
+    "    while True:\n",
+    "        x = x + (M-N)\n",
+    "        cnt += 1\n",
+    "        if x > N:\n",
+    "            x -= N\n",
+    "        elif x < 1:\n",
+    "            x += N\n",
+    "        if y == x:\n",
+    "            x = MNxy[2]\n",
+    "            result = x + M * cnt\n",
+    "            print(result)\n",
+    "            break\n",
+    "        if cnt > ((M*N)/M):\n",
+    "            print(-1)\n",
+    "            break"
    ]
   },
   {
