--- a/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기.ipynb
@@ -285,34 +285,17 @@
     "    x = MNxy[2]\n",
     "    y = MNxy[3]\n",
     "    \n",
-    "#     gcd = 0\n",
-    "#     i = min(M, N)\n",
-    "#     while True:\n",
-    "#         if M % i == 0 and N % i == 0:\n",
-    "#             gcd = i\n",
-    "#             break\n",
-    "#         i -= 1\n",
-    "        \n",
-    "#     if abs(M-N) % gcd:\n",
-    "#         print(-1)\n",
-    "#         continue\n",
-    "    \n",
-    "    cnt = 0\n",
-    "    while True:\n",
-    "        x = x + (M-N)\n",
-    "        cnt += 1\n",
-    "        if x > N:\n",
-    "            x -= N\n",
-    "        elif x < 1:\n",
-    "            x += N\n",
-    "        if y == x:\n",
-    "            x = MNxy[2]\n",
-    "            result = x + M * cnt\n",
-    "            print(result)\n",
-    "            break\n",
-    "        if cnt > ((M*N)/M):\n",
-    "            print(-1)\n",
-    "            break"
+    "if x % N:\n",
+    "    first_y = x % N\n",
+    "else:\n",
+    "    first_y = N\n",
+    "\n",
+    "y_d = (y - first_y) / (M - N)\n",
+    "t_d = x + M * y_d\n",
+    "if y_d == int(y_d):\n",
+    "    print(t_d)\n",
+    "else:\n",
+    "    print(-1)"
    ]
   },
   {
