--- a/1. PS/1.1 Backjoon/8. 규칙찾기2.ipynb
+++ b/1. PS/1.1 Backjoon/8. 규칙찾기2.ipynb
@@ -318,6 +318,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(x,y):\n",
+    "    mod = x % y\n",
+    "    while(mod > 0):\n",
+    "        x = y\n",
+    "        y = mod\n",
+    "        mod = x % y\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcd(435,36)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
