--- a/190207 Flask.md
+++ b/190207 Flask.md
@@ -14,6 +14,8 @@ $ pip install flask_sqlalchemy flask_migrate
 
 quickstart의 [내용 복사](http://flask-sqlalchemy.pocoo.org/2.3/)  후 app.config내용 변경
 
+`flask_migrate` : 데이터베이스에 반복적으로 column 설정하는걸 도와주는 거?라고함
+
 ```python
 from flask import Flask
 from flask_sqlalchemy import SQLAlchemy
