--- a/C9 환경설정.md
+++ b/C9 환경설정.md
@@ -1,16 +1,18 @@
 # C9 환경설정
 
 > 19.01.28. 실습, c9에 실습 파일 있음.
+>
+>  `zzu.li/c9`를 참조한 내용임.
 
 ### 1. pyenv 설정
 
-> pyenv는 하나의 컴퓨터 내에서 여러가지 버전의 python을 사용할 수 있도록 버전관리를 도와준다.
+> `pyenv` : 하나의 컴퓨터 내에서 여러가지 버전의 python을 사용할 수 있도록 버전관리를 도와준다.
 >
-> pyenv global : 전체 전역 파이썬 버전 설정
+> `pyenv global` : 전체 전역 파이썬 버전 설정
 >
-> pyenv local : 해당 디렉토리 파이썬 버전 설정
+> `pyenv local `: 해당 디렉토리 파이썬 버전 설정
 
-먼저 c9.io/login 페이지 접속 - workspace 생성(blank로 생성해야 함)
+먼저 `c9.io/login` 페이지 접속 - `workspace` 생성 (`blank`로 생성해야 함)
 
 아래 명령어 복사(알아서 진행 됨)
 
@@ -91,5 +93,15 @@ if __name__ == '__main__':
 ```powershell
 git config --global user.name ______
 git config --global user.email ______
+```
+
+
+
+### 9. 기타설정
+
+- timezone 설정
+
+```bash
+sudo dpkg-reconfigure tzdata
 ```
 
