--- a/1N.md
+++ b/1N.md
@@ -101,7 +101,7 @@
    - 댓글 작성
 
      ```bash
-     >> board = Baord.objects.get(pk=1)
+     >> board = Board.objects.get(pk=1)
      >> comment = Comment(content='댓글', board=board)
      >> comment.save()
      >> comment.pk
