--- a/데이터베이스.md
+++ b/데이터베이스.md
@@ -23,3 +23,14 @@ zzu.li/hellodb 접속 후 파일 c9으로 옮기기.
 
 
 ### sqlite3 db.sqlite3
+
+### 명령어
+
+##### query의 구성
+
+```bash
+>>> boards.query
+```
+
+
+
