배포이슈정리

--- a/2. Web/배포 하면서 있었던 이슈들.md
+++ b/2. Web/배포 하면서 있었던 이슈들.md
@@ -1,6 +1,6 @@
 # 배포 하면서 있었던 이슈들
 
-velopert 가이드참조
+[velopert 가이드참조](https://react-etc.vlpt.us/08.deploy-s3.html)
 
 ### S3
 
@@ -10,24 +10,163 @@ velopert 가이드참조
 
 ### CloudFront
 
-엔드포인트 주소를 입력하는 과정에서 
+> 결론: 프론트에서 REST API를 쓰지 않았으므로 'REST API 엔드포인트'가 아닌 ''웹사이트 엔드포인트''를 이용해서 해결
 
-두가지의 엔드포인트를 입력할 수 있었는데, React앱에서는 RESTful API를 이용하지 않았으므로 RESTful API주소를 이용하면 배포가 안됌.
+Amazon S3를 사용하여 배포한 경우 웹 사이트 엔드포인트와 REST API 엔드포인트 두가지가 있다.(아래의 **AWS 서비스 엔드포인트**링크 참조) 
 
-##### aws cli 명령어를 이용하여 재배포하기
+우리의 React앱에서는 REST API를 이용하지 않았으므로 REST API주소가 아닌 웹 사이트 엔드포인트 형식의 주소를 입력해 주어야 한다.
 
-aws configure list에서 profile 꼭 확인하자. aws configure list --profile $profilename 으로 자세한 거 확인도 가능하고 또 기타 명령어들..
+**웹 사이트 엔드포인트**: http://webengers.s3-website.ap-northeast-2.amazonaws.com
 
-vi ~/.aws/credentials와 vi ~/.aws/config에 정보가 제대로 입력이 되어 있는지 확인 아니면 yarn invalidation에서 에러가 난다.
+**REST API 엔드포인트**: webengers.s3.amazonaws.com
 
 
+
+**참고)** 리전별 엔드포인트(예: `s3-us-west-1.amazonaws.com`) 대신에 미국 동부(버지니아 북부) 엔드포인트(`s3.amazonaws.com`)를 사용하면 Amazon S3는 기본적으로 가상 호스팅–스타일 요청을 미국 동부(버지니아 북부) 리전으로 라우팅합니다.  (**버킷의 가상 호스팅**링크 참조)
+
+**참고)** 웹 사이트 엔드포인트는 https를 지원하지 않는다.
+
+**참고)** 위 내용에 대해 자세한 정보를 알고 싶다면 아래의 사이트를 보자
+
+​	[AWS 서비스 엔드포인트](https://docs.aws.amazon.com/ko_kr/general/latest/gr/rande.html)
+
+​	[버킷의 가상 호스팅](https://docs.aws.amazon.com/ko_kr/AmazonS3/latest/dev/VirtualHosting.html)
+
+​	[버킷 이름 규칙, 규제 및 제한](https://docs.aws.amazon.com/ko_kr/AmazonS3/latest/dev/BucketRestrictions.html)
+
+
+
+### aws cli 명령어를 이용하여 재배포하기
+
+> 결론: `vi ~/.aws/credentials` 명령어 이용해서 access_key에 끼어있는 이상한 문자 제거하여 1차문제 해결. 아래 명령어에서 존재하지 않는 파일을 참조하는 부분을 제거하여 해결.
+>
+> `$ aws cloudfront create-invalidation --profile=circleci --distribution-id XXXXXXXXXX --paths "/*"` 로 명령어 변경해서 입력함.
+
+```bash
+$ aws cloudfront create-invalidation --profile=circleci --distribution-id XXXXXXXXXX --paths / /index.html /error.html /service-worker.js /manifest.json /favicon.ico
+```
+
+위 명령어로 할 경우 **두가지 에러**가 발생하였다. (위 가이드를 따라 package.json에 script로 등록했을 경우`yarn invalidate`를 사용해도 같다. 어차피 alias일 뿐이다.)
+
+##### 첫 번째 에러
+
+```bash
+An error occurred (InvalidArgument) when calling the CreateInvalidation operation: The Security token included in the request is invalid.
+```
+
+위 메세지는 profile(현재는 circleci)에 담긴 토큰(IAM에서 발급받은 것)이 잘못되었다는 메세지이다. 
+
+먼저 `aws configure list --profile circleci` 을 사용해 profile을 확인하자. 
+
+```bash
+      Name                    Value             Type    Location
+      ----                    -----             ----    --------
+   profile                 circleci           manual    --profile
+access_key     ****************AAAA shared-credentials-file
+secret_key     ****************AAAA shared-credentials-file
+    region           ap-northeast-2      config-file    ~/.aws/config
+```
+
+위와 같이 표시가 될텐데 value는 모두 가려져 있으니 다른 명령어를 이용하여 확인한다. get 명령어를 이용한 방법도 있지만 직접 파일에 접근하는게 더 정확하게 볼 수 있다.
+
+`vi ~/.aws/config`
+
+```bash
+[default]
+region = ap-northeast-2
+output = json
+[profile circleci]
+region = ap-northeast-2
+output = json
+```
+
+`vi ~/.aws/credentials`
+
+```bash
+[default]
+aws_access_key_id = AAAAAAAAAAAAAAAAAAAA
+aws_secret_access_key = AAAABBBBCCCCDDDDEEEEFFFFGGGGHHHHIIIIJJJJ
+[circleci]
+aws_access_key_id = AAAAAAAAAAAAAAAAAAAA
+aws_secret_access_key = AAAABBBBCCCCDDDDEEEEFFFFGGGGHHHHIIIIJJJJ
+```
+
+위와 같이 표시되니 확인하자. 왜인진 모르겠으나 secret_access_key에 이상한 문자가 끼어있어서 configure list를 사용하면 보이지 않지만 파일에는 존재하는 문자가 있어서 위와 같은 **invalid argument에러**가 난 것 같다.
+
+이외에  <u>프로필에 관한 명령어</u>는 **아래**에 따로 적어 놓았으니 오류가 해결이 되지 않는다면 참조하자.
+
+
+
+##### 두 번째 에러
+
+```bash
+An error occurred (InvalidArgument) when calling the CreateInvalidation operation: Your request contains one or more invalid invalidation paths.
+```
+
+위 문제를 해결하고 나니 이 문제가 발생하였다. 대충 해석하면 당신이 보낸 요청(명령어)에 하나 이상의 잘못된 경로(path)가 있다는 것이다.  어딘가에서  path에 있는 파일들은 존재하지 않아도 봐서 크게 문제가 되지 않을거라 생각했지만 그렇지 않은 모양이다.
+
+```bash
+$ aws cloudfront create-invalidation --profile=circleci --distribution-id XXXXXXXXXX --paths "/*"
+```
+
+경로 안의 모든 파일을 참조하려면 위와 같이 "/*"를 입력해 주면 된다. 
+
+제대로 동작하였다면 json형태의 완성문구를 볼 수 있다. 페이지에 접속해서 확인해보자.
+
+
+
+###### 프로필에 관한 명령어들
+
+```bash
+$ aws configure list
+```
+
+default계정 정보를 보여준다. 어차피 `--profile=circleci` 가 명령어에 포함되어 있으니 상관 없는 것 같지만 만약 이 부분을 제외하고 명령어를 입력한다면 default 계정으로 동작할지도 모르겠다.(안해봄)
+
+만약 default계정을 잘 못 입력하여 default계정을 바꾸고 싶은 경우 
+
+```bash
+$ export AWS_DEFAULT_PROFILE=circleci
+```
+
+를 이용하면 그 터미널을 사용하는 경우에는 바뀐다.(다른 터미널은 안바뀐다.) 윈도우라면 set명령어나 setx명령어가 있는데 왜 적용이 안되는지는 모르겠다.
 
 
 
 ### 개인 도메인이름 사용하기
 
-CloudFront에서 도메인이름을 CNAME으로 사용하려면 내가 도메인을 소유하고 있다는 인증서를 발급받아야함. 일단은 cluodfront godaddy를 검색해서 나오는 사이트에서 참조하자. 
+> 결론: 일단 뭐라도 따라했으면 시간을 가지고 기다린 뒤에 다시 시도해보자. 도메인이름 사용하는데 시간이 조금 걸린다.
 
+[Serving a Static Site Over HTTPS Using S3, CloudFront, and GoDaddy](https://medium.com/@brodartec/hosting-a-static-site-with-https-enabled-using-aws-s3-cloudfront-and-godaddy-826dae41fdc6)
 
+GoDaddy를 사용하여 위 문서를 따라 배포하였다. 위 문서를 따라하다 막히는 부분만 작성한다.
 
-### 
+##### ACM을 사용해서 SSL 인증서 받아오기
+
+Godaddy의 경우 admin@webengers.space같이 이메일을 사용하려면 추가요금을 내야하니 DNS검증을 이용한다. 각각의 도메인네임(www포함과 www미포함)에 대하여 3가지 정보를(이름, 유형, 값) 준다. 이 값들을 Godaddy의 레코드에 입력해줘야 한다. 
+
+이 부분에서 **DNS 서비스 공급자마다 CNAME 기록을 추가하는 절차가 다르므로 **GoDaddy의 경우 3가지 정보 중 이름에서 우리 주소를 지우고 입력해 줘야 한다.  TTL은 빨리 보고 싶으니 짧게 주자. (최소 600) (아래의 참조링크 내용임)
+
+예) ACM제공 3가지 정보
+
+| 이름                                 | 유형  | 값                                      |
+| ------------------------------------ | ----- | --------------------------------------- |
+| _aaaaaaaaaaaaaa.www.webengers.space. | CNAME | _aaaaaaaaaa.oooooo.acm-validations.aws. |
+| _bbbbbbbbbbbbb.webengers.space.      | CNAME | _bbbbbbbbb.oooooo.acm-validations.aws.  |
+
+예) GoDaddy에 입력하는 법
+
+| 유형  | 호스트               | 지시방향                                | TTL  |
+| ----- | -------------------- | --------------------------------------- | ---- |
+| CNAME | _aaaaaaaaaaaaaa.www. | _aaaaaaaaaa.oooooo.acm-validations.aws. | 600  |
+| CNAME | _bbbbbbbbbbbbb.      | _bbbbbbbbb.oooooo.acm-validations.aws.  | 600  |
+
+이제 최소 몇분에서 몇십분 (잘 기억 안남)기다리면 인증서가 발급이 된다. (몇시간이 걸린 적도 있다..)
+
+나머지는 문서를 따라 입력해주면 또 몇십분에서 몇시간정도 기다리면 완료된다. 인내심을 가지고 기다렸다가 들어가자 괜히 오류가 난 페이지만 보고 삽질할지도 모른다..
+
+**참조)**
+
+​	[DNS Validation for GoDaddy domain with ACM](https://forums.aws.amazon.com/thread.jspa?messageID=913098)
+
+​	
